--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -337,7 +337,8 @@ div.tab-frame div.tab{ display:none; padding:5px 10px;clear:left}
 
 div.tab-frame input[type="radio"]:nth-of-type(1):checked ~ .tab:nth-of-type(1),
 div.tab-frame input[type="radio"]:nth-of-type(2):checked ~ .tab:nth-of-type(2),
-div.tab-frame input[type="radio"]:nth-of-type(3):checked ~ .tab:nth-of-type(3)
+div.tab-frame input[type="radio"]:nth-of-type(3):checked ~ .tab:nth-of-type(3),
+div.tab-frame input[type="radio"]:nth-of-type(4):checked ~ .tab:nth-of-type(4)
 { display:block;}
 /* End modal login signup*/
 
