--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -220,14 +220,14 @@
 					<div id="recover-password" class="tab">
 						<div class="w3-center"><br>
 							<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
-							<h2 class="w3-margin-bottom">Recupera la tua password</h2>
+							<h2 class="w3-margin-bottom">Ottieni una nuova password</h2>
 						</div>
 						<form class="w3-container" action="login" method="post">
 					        <div class="w3-section">
 					          <h3 class="univaq-color profile">Inserisci l'email di recupero</h3>
 					          <label for="emailRecupero"><b>Email</b></label>
 				         	  <input id="emailRecupero" class="w3-input w3-border-bottom w3-margin-bottom" maxlength="45" type="email" placeholder="Inserisci l'email dove desideri ricevere la nuova password" name="email" autocomplete="off" required />
-				          	  <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="recupera" value="recupera">Recupera password</button>
+				          	  <button class="w3-button w3-block w3-section w3-padding univaq-color-background" type="submit" name="ottieni" value="ottieni">Ottieni password</button>
 				          </div>
 					    </form>
 					</div>
